tests/ui/traits/copy-guessing.stderr
error[E0282]: type annotations needed
  --> $DIR/copy-guessing.rs:20:13
   |
LL |     let n = None;
   |             ^^^^ cannot infer type of the type parameter `T` declared on the enum `Option`
   |
help: consider specifying the generic argument
   |
LL |     let n = None::<T>;
   |                 +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
